--- a/09-tabelas/index.html
+++ b/09-tabelas/index.html
@@ -25,8 +25,8 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>bermuda</td>
-            <td>Azul</td>
+            <td>calça jeans</td>
+            <td>vermelha</td>
             <td>P</td>
             <td>R$ 160,00</td>
             <td>Esgotado</td>
