--- a/09-tabelas/index.html
+++ b/09-tabelas/index.html
@@ -25,7 +25,7 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>calça jeans</td>
+            <td>bermuda</td>
             <td>vermelha</td>
             <td>P</td>
             <td>R$ 160,00</td>
